--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+
 @import "tailwindcss";
 @plugin "daisyui";
+
+body{
+      font-family: "Outfit", sans-serif;
+}
+
+.logo{
+    font-family: "Cabin", sans-serif;
+}
