added all jobs page and added apply job page for user and user info set in database

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ body{
 .logo{
     font-family: "Cabin", sans-serif;
 }
+
+.nav-style li a.active{
+    border-bottom: 3px solid rgb(6, 80, 241);
+    padding: 8px;
+}
